--- a/src/Samples/MimeDetective.BlazorWasm/Pages/Home.razor
+++ b/src/Samples/MimeDetective.BlazorWasm/Pages/Home.razor
@@ -2,6 +2,8 @@
 @using MimeDetective
 @using MimeDetective.Definitions
 @using MimeDetective.Engine
+@using MimeDetective.Storage
+@using System.Collections.Immutable
 @using System.Text.Json
 @using System.Text.Json.Serialization
 
@@ -46,21 +48,12 @@ else
             mStream.Seek(0, SeekOrigin.Begin);
             var result = _inspector.Inspect(mStream);
 
-            Result = JsonSerializer.Serialize(result.Select(x => new {
-                x.Definition.File,
-                x.Type,
-                x.Points,
-                x.Percentage
-            }), new
-            JsonSerializerOptions
-                {
-                    WriteIndented = true,
-                    Converters =
-                        {
-                        new JsonStringEnumConverter(JsonNamingPolicy.CamelCase)
-                        }
-                });
+            Result = JsonSerializer.Serialize(result.Select(x => new DefinitionMatchSerializable(x)
+            ), MySerializerContext.Default.Options);
 
         }
     }
+
+
+
 }
